<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Garçom Amigo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="imageViewLogo"></string>
    <string name="editTextUsuario">Usuário</string>
    <string name="editTextSenha">Senha</string>
    <string name="checkBoxSalvarSenha">Salvar Senha</string>
    <string name="buttonCadastrar">Cadastre-se aqui!</string>
    <string name="buttonEntrar">Entrar</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="textViewNomeCompleto">Nome Completo: </string>
    <string name="textViewSobrenome">Sobrenome: </string>
    <string name="textViewCpf">CPF: </string>
    <string name="textViewDataNascimneto">Data de Nascimento: </string>
    <string name="textViewCelular">Celular: </string>
    <string name="textViewEmail">Email: </string>
    <string name="textViewConfirmarEmail">Confirmar Email: </string>
    <string name="title_activity_cardapio">Cardápio</string>
    <string name="buttonCancelar">Cancelar</string>
    <string name="buttonContinuar">Continuar</string>
    <string name="title_activity_cadastro_activity2">Cadastro</string>
    <string name="title_activity_cadastro2">Cadastro</string>
    <string name="textViewSenha">Senha: </string>
    <string name="textViewConfirmarSenha">Confirmar Senha: </string>
    <string name="pedidosAtuais">Pedidos Atuais: </string>
    <string name="novoPedido">INCLUIR PEDIDOS</string>
    <string name="facaSeuPedido">FAÇA SEU PEDIDO</string>
    <string name="promocoes">PROMOÇÕES</string>
    <string name="contato">CONTATO</string>
    <string name="quemSomos">QUEM SOMOS</string>
    <string name="title_activity_novo_pedido">NovoPedidoActivity</string>
    <string name="title_activity_novo_pedido_main">NovoPedidoMainActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_splash">Garçom Amigo</string>
    <string name="alterarDados">ALTERAR DADOS</string>
    <string name="sair">SAIR</string>
    <string name="textViewMesaSelecionada">Mesa Selecionada:</string>
    <string name="buttonMeusPedidos">MEUS PEDIDOS</string>
    <string name="title_activity_alterar_dados">Alterar Dados</string>
    <string name="title_activity_detalhes_produto">Detalhes</string>
    <string name="buttonConfirmarPedido">Incluir Pedido</string>
    <string name="textViewPreco">Preco</string>
    <string name="textViewNomeProduto">Produto</string>
    <string name="textViewDescricao">Ingredientes:</string>
    <string name="textViewDetalhes">Ingredientes</string>
    <string name="textViewQuantidade">Quantidade:</string>
    <string name="buttonMais">+</string>
    <string name="buttonProsseguir">Prosseguir</string>
    <string name="buttonMenos">-</string>
    <string name="mesa2">Selecionar Mesa</string>
    <string name="menu2">Voltar ao Menu</string>
    <string name="title_activity_promocoes">PromocoesActivity</string>
    <string name="textViewOps">Oops . . . !</string>
    <string name="title_activity_quem_somos">Quem Somos</string>
    <string name="textViewQuemSomos">Somos uma empresa que foi desenvolvida em 2013/2014, que tem o Intuito de satisfazer a demanda de bares e restaurantes. Trata-se de um projeto 
                            desenvolvido entre alunos da faculdade Dom Bosco. Em função do crescimento da Internet e celulares com sistemas de Android e IOS,
                            visamos melhorar as relações entre clientes e estabelecimentos e a capacidade dos mesmo de se adequar a novas tecnologias, 
                            que será cada vez uma tendência maior no mercado atual e futuro.</string>
    <string name="textView1">1</string>
    <string name="title_activity_selecionar_mesa">Selecione sua Mesa</string>
	<string name="prompt_mesa">Selecione uma Mesa</string>
    <string-array name="mesa_array">

    </string-array>

</resources>